--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <header>
     <div style="font-weight:900; font-size: 1.8rem; letter-spacing: -1px;">FLUIDGEO</div>
-    <a href="mailto:craig@fluidgeollc.com" class="btn">Get Trial Key</a>
+    <a href="mailto:info@fluidgeollc.com" class="btn">Get Trial Key</a>
 </header>
 
 <section class="hero">
@@ -113,7 +113,8 @@
         Zero-copy GPU acceleration for the Blackwell era. <br>
         Move from nightly batch jobs to sub-second real-time intelligence.
     </p>
-    <code>pip install h3-turbo</code>
+    <br><br>
+    <a href="h3_turbo_installer.sh" download style="color: var(--primary); text-decoration: none; border-bottom: 1px dashed var(--primary); font-size: 0.9rem;">Download installer (Linux x86_64, Nvidia sm_89+)</a>
 
     <div class="stats-container">
         <div class="stat-box">
@@ -129,6 +130,8 @@
 
 <footer style="padding: 100px 5%; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); opacity: 0.4;">
     &copy; 2026 FluidGeo LLC.
+    <br><br>
+    <a href="benchmarks.txt" style="color: inherit; text-decoration: none;">Benchmarks</a>
 </footer>
 
 </body>
