--- a/index.html
+++ b/index.html
@@ -104,25 +104,24 @@
 
 <header>
     <div style="font-weight:900; font-size: 1.8rem; letter-spacing: -1px;">FLUIDGEO</div>
-    <a href="mailto:info@fluidgeollc.com" class="btn">Get Trial Key</a>
+    <a href="mailto:info@fluidgeo.com" class="btn">Get Trial Key</a>
 </header>
 
 <section class="hero">
-    <h1>H3-Turbo: 1,186x Faster Spatial Joins</h1>
+    <h1>H3-Turbo: 1,000x Faster Spatial Joins</h1>
     <p style="font-size: 1.4rem; opacity: 0.8; margin-bottom: 40px;">
         Zero-copy GPU acceleration for the Blackwell era. <br>
         Move from nightly batch jobs to sub-second real-time intelligence.
     </p>
+    <code>pip install h3-turbo</code>
     <br><br>
+    <a href="benchmarks.txt" style="color: var(--primary); text-decoration: none; border-bottom: 1px dashed var(--primary); font-size: 0.9rem;">Benchmarks</a>
+    <br>
     <a href="h3_turbo_installer.sh" download style="color: var(--primary); text-decoration: none; border-bottom: 1px dashed var(--primary); font-size: 0.9rem;">Download installer (Linux x86_64, Nvidia sm_89+)</a>
 
     <div class="stats-container">
         <div class="stat-box">
-            <span class="stat-number">1,186x</span>
-            <p>1B Ping Spatial Join Performance</p>
-        </div>
-        <div class="stat-box">
-            <span class="stat-number">1,538x</span>
+            <span class="stat-number">1,500x</span>
             <p>50M H3 Raw Compute Throughput</p>
         </div>
     </div>
@@ -130,8 +129,6 @@
 
 <footer style="padding: 100px 5%; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); opacity: 0.4;">
     &copy; 2026 FluidGeo LLC.
-    <br><br>
-    <a href="benchmarks.txt" style="color: inherit; text-decoration: none;">Benchmarks</a>
 </footer>
 
 </body>
