--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
 <section class="hero">
     <h1>H3-Turbo: 1,000x Faster Spatial Joins</h1>
     <p style="font-size: 1.4rem; opacity: 0.8; margin-bottom: 40px;">
-        Zero-copy GPU acceleration for the Blackwell era. <br>
+        Zero-copy GPU acceleration. <br>
         Move from nightly batch jobs to sub-second real-time intelligence.
     </p>
-    <code>pip install h3-turbo</code>
     <br><br>
     <a href="benchmarks.txt" style="color: var(--primary); text-decoration: none; border-bottom: 1px dashed var(--primary); font-size: 0.9rem;">Benchmarks</a>
     <br>
