--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 <header>
     <div style="font-weight:900; font-size: 1.8rem; letter-spacing: -1px;">FLUIDGEO</div>
     <a href="mailto:info@fluidgeo.com" class="btn">Get Trial Key</a>
+    <a href="mailto:craig@fluidgeollc.com" class="btn">Get Trial Key</a>
 </header>
 
 <section class="hero">
@@ -114,6 +115,8 @@
         Move from nightly batch jobs to sub-second real-time intelligence.
     </p>
     <br><br>
+    <a href="usage.html" style="color: var(--primary); text-decoration: none; border-bottom: 1px dashed var(--primary); font-size: 0.9rem;">Usage Guide</a>
+    <br>
     <a href="benchmarks.txt" style="color: var(--primary); text-decoration: none; border-bottom: 1px dashed var(--primary); font-size: 0.9rem;">Benchmarks</a>
     <br>
     <a href="h3_turbo_installer.sh" download style="color: var(--primary); text-decoration: none; border-bottom: 1px dashed var(--primary); font-size: 0.9rem;">Download installer (Linux x86_64, Nvidia sm_89+)</a>
