--- a/usage.html
+++ b/usage.html
@@ -116,7 +116,7 @@ sudo ./h3_turbo_installer.sh</code></pre>
                     or set it programmatically before calling API functions.
                 </p>
                 <div class="alert alert-info">
-                    <strong>Tip:</strong> You can generate a demo license using <code>python demo_license.py</code> (if available in your dev environment).
+                    Get a 1 month license key <a href="mailto:info@fluidgeo.com">here</a>.
                 </div>
                 <pre><code>import os
 import h3_turbo
