--- a/usage.html
+++ b/usage.html
@@ -91,7 +91,7 @@
                     Accelerate your H3 geospatial indexing and spatial joins using SYCL-based GPU acceleration.
                 </p>
                 <p>
-                    <strong>H3 Turbo</strong> Python bindings for high-performance H3 operations. Other language bindings coming soon.
+                    <strong>H3 Turbo</strong> Python bindings for high-performance H3 operations. Other language bindings coming soon, plus Windows, Mac and AMD support.
                     offloading heavy computations to the GPU. It is designed for massive datasets where standard CPU-based H3 libraries become a bottleneck.
                 </p>
             </section>
